fix: loading progress on firefox/edge/safari

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -39,93 +39,82 @@
   }
 }
 
-@layer components {
-  @property --counter {
-    syntax: '<integer>';
-    initial-value: 0;
-    inherits: true;
+@property --counter {
+  syntax: '<integer>';
+  initial-value: 0;
+  inherits: true;
+}
+
+@keyframes increment {
+  to {
+    --counter: 99;
+  }
+}
+
+.countdown {
+  @apply font-thin;
+  display: grid;
+  width: 26.25rem;
+  height: auto;
+  aspect-ratio: 1;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: -1;
+  font-size: 4.5rem;
+  transform: translate(-50%, -50%);
+  &:not(.stopped) {
+    animation: increment 1.5s linear forwards;
   }
 
-  @keyframes increment {
-    to {
-      --counter: 99;
-    }
-  }
-
-  .countdown {
-    --k: calc(var(--counter) / 100);
-
-    @apply font-thin;
-    display: grid;
-    width: 26.25rem;
-    height: auto;
-    aspect-ratio: 1;
-    position: absolute;
+  &::after {
+    bottom: 50%;
     left: 50%;
-    top: 50%;
-    z-index: -1;
-    font-size: 4.5rem;
+    position: absolute;
     transform: translate(-50%, -50%);
-    &:not(.stopped) {
-      animation: increment 1.5s linear forwards;
-    }
-
-    &::after {
-      bottom: 50%;
-      left: 50%;
-      position: absolute;
-      transform: translate(-50%, -50%);
-      counter-reset: s var(--counter);
-      content: counter(s, decimal-leading-zero);
-      line-height: 0;
-    }
-
-    svg {
-      grid-row: 1;
-      grid-column: 1;
-      [r] {
-        fill: none;
-        stroke: #c0c0c0;
-      }
-      [r] + [r] {
-        stroke: #1d1d1d;
-        stroke-linecap: square;
-        transform: rotate(-90deg);
-        stroke-dasharray: var(--k) 1;
-      }
-    }
-    @media (max-width: 768px) {
-      width: 71.1111vw;
-      font-size: 3rem;
-    }
+    counter-reset: s var(--counter);
+    content: counter(s, decimal-leading-zero);
+    line-height: 0;
   }
 
-  .underline-animated {
-    position: relative;
+  [data-progress] {
+    transform: rotate(-90deg);
+    stroke-dasharray: var(--counter) 100;
+  }
+}
 
-    a {
-      display: inline-block;
-    }
+.underline-animated {
+  position: relative;
 
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      display: block;
-      left: 0;
-      bottom: 1px;
-      background: black;
-      transition: transform 0.4s ease;
-      transform: scaleX(0);
-      transform-origin: right;
-      pointer-events: none;
-    }
+  a {
+    display: inline-block;
+  }
 
-    &:hover::after {
-      transform-origin: left;
-      transform: scaleX(1);
-      right: 0;
-    }
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    display: block;
+    left: 0;
+    bottom: 1px;
+    background: black;
+    transition: transform 0.4s ease;
+    transform: scaleX(0);
+    transform-origin: right;
+    pointer-events: none;
+  }
+
+  &:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
+    right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .countdown {
+    width: 71.1111vw;
+    font-size: 3rem;
   }
 }
